<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/settings"
        android:title="Settings"
        app:showAsAction="never"/>

    <item android:id="@+id/auto_player"
        android:title="Autoplayer"
        app:showAsAction="never"/>

    <item android:id="@+id/two_player"
        android:title="Two Player"
        app:showAsAction="never"/>

</menu>